# planter_pressure

./: ArchiTech_Documentation.md  FLUTTER_PYTHON_ARCHITECTURE.md  README.md  build_all.bat  process_image.spec  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/planter_pressure/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: image_processing_service.dart  main.dart  native_engine_bindings.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_engine/: build_assets.py
native_engine/windows/: CMakeLists.txt  engine.cpp  engine.h
python/: process.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
